objects/Region__c.object
<CustomObject>
    <description>Holds Region Related Info. Current Record Types = [Covid]. Can be expanded for other types of regions.  Linked to County and Accounts.</description>
    <fields>
        <fullName>Gaming_Shut_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is gaming shut down as defined by the associated State Governor?</inlineHelpText>
        <label>Gaming Shut Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Shape_Boundary__c</fullName>
        <description>The polygon coordinates of the region.</description>
        <inlineHelpText>The polygon coordinates of the region.</inlineHelpText>
        <label>Geo Shape Boundary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Description__c</fullName>
        <description>General Description of the Covid Region</description>
        <inlineHelpText>General Description of the Covid Region ie. SOUTHERN</inlineHelpText>
        <label>Region Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>https://coronavirus.illinois.gov/s/restore-illinois-mitigation-plan. Currently only shown for IL States</description>
        <inlineHelpText>Please refer to https://coronavirus.illinois.gov/s/restore-illinois-mitigation-plan for the latest news</inlineHelpText>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
                <value>
                    <fullName>Phase 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Accounts within this region. DLRS Maintained. Do not manually modify this field!</description>
        <inlineHelpText>Total Number of Accounts within this region Automatically populated.</inlineHelpText>
        <label>Total Accounts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Counties__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Counties within this region. DLRS Maintained. Do not manually modify this field!</description>
        <inlineHelpText>Total Number of Counties within this region. Automatically populated.</inlineHelpText>
        <label>Total Counties</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>State__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Counties__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Covid_Regions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>State__c</columns>
        <columns>Region_Description__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Counties__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Region__c.Covid</value>
        </filters>
        <label>All Covid Regions</label>
    </listViews>
    <listViews>
        <fullName>All_IL_Regions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region_Description__c</columns>
        <columns>State__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Tier__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Counties__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>All IL Regions</label>
    </listViews>
    <listViews>
        <fullName>All_Non_IL_Regions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region_Description__c</columns>
        <columns>State__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Counties__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
            <value>IL</value>
        </filters>
        <label>All Non IL Regions</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <recordTypes>
        <fullName>Covid</fullName>
        <active>true</active>
        <description>Covid Region</description>
        <label>Covid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Region</fullName>
        <active>true</active>
        <label>Key Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>